# package-PipeVal

./: .gitignore  CHANGELOG.md  COPYING  Dockerfile  LICENSE  README.md  metadata.yaml  setup.cfg  setup.py  supported.py  test_validate_io.py  validate.py  validate_io.py  validate_nf.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CICD-base.yaml  Docker-build-release.yaml  prepare-release.yaml
docker/: Dockerfile
example/: README.md  nextflow.config  validate-inputs-example.nf
generate_checksum/: __init__.py  __main__.py  checksum.py
pipeval/: __init__.py  __main__.py  common.py
pipeval/generate_checksum/: __init__.py  __main__.py  checksum.py
pipeval/validate/: __init__.py  __main__.py  files.py  validate.py  validate_types.py
pipeval/validate/validators/: __init__.py  bam.py  cram.py  fastq.py  sam.py
test/: test_main.py
test/unit/: test_common.py  test_generate_checksum.py  test_main.py  test_validate.py
tests/: test_main.py  test_validate.py  test_validate_io.py
validate/: __init__.py  __main__.py  bam.py  files.py  validate.py  validate_io.py  validate_types.py
validate/validators/: __init__.py  bam.py  cram.py  sam.py  vcf.py
