[metadata]
name = pipeval
version = attr: pipeval.__version__
author = 'Yash Patel'
author_email = 'YashPatel@mednet.ucla.edu'
description = 'Python CLI tool to validate different file types and their contents in Nextflow scripts/pipelines'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uclahs-cds/public-tool-PipeVal
project_urls =
    Bug Tracker = https://github.com/uclahs-cds/public-tool-PipeVal/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2.0 (GPL-2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

install_requires =
    mock==4.0.2
    pytest==7.2.2
    pysam==0.22.1
    python-magic==0.4.27

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    pipeval = pipeval.__main__:main
